# ghc-lib-demo

./: .gitignore  LICENSE.md  Main.hs  Makefile  README.md  ghc-lib-test.cabal  tmp
foo/: Bar.hs  Foo.hs  build.sh  clean.sh  foo
