cabal-version:       2.4

name:                ghc-lib-test
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              Justin Christensen
maintainer:          justin@promise.io
extra-source-files:  *.md

common props
    ghc-options: -Wall
    build-depends: base ^>=4.12.0.0
    default-language: Haskell2010

executable ghc-lib-test
  import: props
  main-is:             Main.hs
  build-depends:
      ghc
    , ghc-paths
    , optparse-applicative
    , filepath
    , text
    , mtl

executable libs-test
  import: props
  main-is:             Libs.hs
  build-depends:
      aeson
    , yaml
    , mtl
